opam-version: "2.0"
name:"cgroups"
license: "BSD"
version: "dev"
author: ["Guillaume Bury <guillaume.bury@gmail.com>"]
maintainer: ["Guillaume Bury <guillaume.bury@gmail.com>"]
synopsis: "Cgroups is an interface for control groups"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.02.1" }
  "dune"
  "base-unix"
  "odoc" { doc }
  ]
tags: [ "cgroup" ]
homepage: "https://github.com/Gbury/ocaml-cgroups"
dev-repo: "git+https://github.com/Gbury/ocaml-cgroups.git"
bug-reports: "https://github.com/Gbury/ocaml-cgroups/issues/"
